kong/20-kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      serviceAccountName: kong-serviceaccount
      containers:
      - name: kong
        image: kong:3.4
        ports:
        - name: proxy
          containerPort: 8000
        - name: proxy-ssl
          containerPort: 8443
        - name: admin
          containerPort: 8001
        - name: admin-ssl
          containerPort: 8444
        - name: manager
          containerPort: 8002
        - name: manager-ssl
          containerPort: 8445
        - name: status
          containerPort: 8100
        livenessProbe:
          httpGet:
            path: /status
            port: 8100
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: 8100
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: kong-config
          mountPath: /kong_configs
      volumes:
      - name: kong-config
        configMap:
          name: kong-config
