kong/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: local-ca
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kong-admin.home.arpa
    secretName: kong-admin-tls
  rules:
  - host: kong-admin.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-admin
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: local-ca
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kong-manager.home.arpa
    secretName: kong-manager-tls
  rules:
  - host: kong-manager.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-admin
            port:
              number: 8002
